# Connect4_CPP

./: .gitignore  CMakeLists.txt  Connect4_CPP.cbp  Connect4_CPP.depend  Makefile  README.md  benchmark.cpp  bitboard.hpp  board.hpp  main  main.cpp  main.html  main.js  main.wasm  minimax.hpp  minimaxbit.hpp  test.cpp
include/: app.h  bitboard.hpp  board.hpp  colours.hpp  game.h  game.hpp  ltable.hpp  minimaxbit.hpp  minimaxtree.hpp
